--- a/machine.html
+++ b/machine.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPW9Vfwz&k=Job&j=ozyv9fwv&__jvst=Employee&__jvsd=sa5Jzgwi&__jvsc=Twitter&bid=nBLeWLwM'>Splunk Careers - Senior Software Engineer in Test - Machine Learning</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-28</p>
+<hr/>
 <h5><a href='https://rakuten.referrals.selectminds.com/jobs/application-engineer-machine-learning-group-bdd-9714'>Application Engineer (Machine Learning Group): BDD - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -216,7 +220,7 @@ federal?...</p>
 <p>2019?7?10? ... Experience using TensorFlow, PyTorch, Chainer, Caffe, or other deep learning 
 frameworks; Experience with data analysis and development using the cloud?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/vimeo/jobs/1783179'>Job Application for Senior Machine Learning Engineer, ML ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vimeo/jobs/1783179'>Job Application for Senior Machine Learning Engineer, ML ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... About the team: Video is 80% of today's global Internet traffic. The Engineering 
 team at Vimeo is building AI-driven tools to help anyone who wants to make a?...</p>
@@ -289,7 +293,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/stratus/jobs/machine-learning-researcher-b1I8DsJhCr6yRTcR_n82lY'>Machine Learning Researcher #0458 job at Stratus Solutions in College Park, MD, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/stratus/jobs/machine-learning-researcher-b1I8DsJhCr6yRTcR_n82lY'>Machine Learning Researcher #0458 job at Stratus Solutions in College Park, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -314,7 +318,7 @@ Atypon Systems.</p>
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://advertima.join.com/jobs/255927-senior-computer-vision-and-machine-learning-engineer-in-tech-startup'>(Senior) Computer Vision & Machine Learning Engineer in Tech ...</a></h5> 
+<h5><a href='https://advertima.join.com/jobs/255927-senior-computer-vision-and-machine-learning-engineer-in-tech-startup'>(Senior) Computer Vision & Machine Learning Engineer in Tech ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Advertima AG has a job opening for (Senior) Computer Vision & Machine 
 Learning Engineer in Tech-Startup in Berlin (published: 11.07.2019). Apply now 
@@ -329,19 +333,19 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/phdata/jobs/1461947'>Job Application for Machine Learning Operations Engineer at phData</a></h5> 
+<h5><a href='https://boards.greenhouse.io/phdata/jobs/1461947'>Job Application for Machine Learning Operations Engineer at phData</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C'>Atypon Systems - Jobs: Machine Learning / AI / Big Data Engineer, Athens - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C'>Atypon Systems - Jobs: Machine Learning / AI / Big Data Engineer, Athens - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genesys.referrals.selectminds.com/jobs/sr-machine-learning-engineer-3637'>Sr. Machine Learning Engineer - Genesys Careers</a></h5> 
+<h5><a href='https://genesys.referrals.selectminds.com/jobs/sr-machine-learning-engineer-3637'>Sr. Machine Learning Engineer - Genesys Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://oath.wd5.myworkdayjobs.com/careers/job/US---Sunnyvale/Head-of-Product--Machine-Learning-Platform_JR0010571'>Head of Product, Machine Learning Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oath.wd5.myworkdayjobs.com/careers/job/US---Sunnyvale/Head-of-Product--Machine-Learning-Platform_JR0010571'>Head of Product, Machine Learning Platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... BSc, MSc or PhD in Computer Science, Statistics, or comparable knowledge; 
 Prior strong expertise and experience in machine learning and data science?...</p>
@@ -380,7 +384,7 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p>6 days ago ... Machine Learning Engineer. San Francisco. Engineering. Full-time. Apply for this 
 job. Dor is a retail analytics startup that uses a first-of-its-kind hardware and?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999691878102-intern-data-science-m-f-d-machine-learning-model-compression'>E. Breuninger GmbH &amp; Co. Intern Data Science (m/f/d) Machine Learning / Model Compression | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999691878102-intern-data-science-m-f-d-machine-learning-model-compression'>E. Breuninger GmbH &amp; Co. Intern Data Science (m/f/d) Machine Learning / Model Compression | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -421,7 +425,7 @@ Position] at Mercari, inc.</p>
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1766303'>Job Application for Research Scientist (Machine Learning/Deep ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1766303'>Job Application for Research Scientist (Machine Learning/Deep ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 7, 2019 ... You're a research scientist who has published in top tier conferences and are 
 passionate about having a positive impact on the world. You are enthusiastic?...</p>
@@ -457,7 +461,7 @@ technologies to solve a variety of problems; Translate user stories and business
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/houzz/00ba0880-760f-43b2-bb66-4ea5d893b049'>Houzz - Research Engineer | Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/00ba0880-760f-43b2-bb66-4ea5d893b049'>Houzz - Research Engineer | Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -468,12 +472,6 @@ technologies to solve a variety of problems; Translate user stories and business
 <h5><a href='https://jobs.lever.co/tri-ad/618b74a5-4e66-434e-8e20-65a8a646b0b7'>TRI-AD, Inc - Machine Learning Engineer for Computer Vision</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/tsra-main/job/onEcafw7'>Xperi Careers - Senior Systems Administrator - Machine Learning</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 7, 2019 ... Stand out and be the lead engineer as Xperi expands into the exciting area of 
-Machine Learning. We are currently seeking a motivated human to join our team
-?...</p>
 <hr/>
 
 
